# TrestleAcademy-Task1

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
