[tool.poetry]
name = "createuserinfo"
version = "1"
description = "FastAPI Application that allows user-entry of credentials"
authors = ["William Jefferson Mensah"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
typing = "^3.10.0.0"
pydantic = "^1.10.2"
csv23 = "^0.3.4"
hashlib = "^20081119"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
